--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <body>
+    <h1>Hello World</h1>
+    <p>I am taking the Web Design course because I am interested in computer networking. Creating a website seemed to be a logical start to this end. Also, I've worked with HTML in codecademy before.</p>
+  </body>
+</html>
