--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <h2 style='color: red;'>This is not orange.</h2>
     <h3 style='background-color: powderblue;'>This is not red.</h3>
     <h5 style='font-family: verdana'>This is not Times.</h5>
-    <p><a href = 'nelhs.org'>Please donate money to this organization.</a></p>
-    <p title='Changed Color'><a href='nelhs.org' class='hello'>NELHS</a></p>
+    <p><a href = 'https://www.nelhs.org'>Please donate money to this organization.</a></p>
+    <p title='Changed Color'><a href='https://www.nelhs.org' class='hello'>NELHS</a></p>
     <p style='font-size:160%;'>Hello</p>
     <hr>
     <pre>
